# xarray-adios

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: lazy-loading-design.md
src/xarray_adios/: __init__.py  _array.py  _common.py  _pio_decomp.py  _pio_dims.py  _pio_read.py  adios_store.py  backend.py  pio_store.py
tests/: conftest.py  generate_fixtures.py  test_backend.py  test_common.py  test_e3sm_fixtures.py  test_ne30pg2_regression.py  test_pio_decomp.py  test_pio_dims.py
tests/fixtures/eam_h0_gaussian_15x30.nc.bp/: data.0  md.0  profiling.json
tests/fixtures/eam_h0_mf_t1.nc.bp/: profiling.json
tests/fixtures/eam_h0_mf_t2.nc.bp/: data.0  md.0  md.idx  profiling.json
tests/fixtures/eam_h0_mf_t3.nc.bp/: data.0  md.0  mmd.0  profiling.json
tests/fixtures/eam_h1_native_ne4pg2.nc.bp/: data.0  md.0  md.idx  mmd.0  profiling.json
tests/fixtures/eam_h2_gaussian_10x20.nc.bp/: data.0  md.0  md.idx  mmd.0  profiling.json
tests/fixtures/ne30pg2_h0a.nc.bp/: md.0  mmd.0  profiling.json
tests/fixtures/ne30pg2_h0b.nc.bp/: md.0  md.idx  mmd.0  profiling.json
