[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xarray-adios"
version = "0.1.0"
description = "Xarray backend for reading ADIOS BP files, including E3SM/SCORPIO PIO output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "xarray>=2022.03.0",
    "numpy",
    "adios2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.entry-points."xarray.backends"]
adios = "xarray_adios.backend:AdiosBackendEntrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/xarray_adios"]
